# pykotor-lib

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  lint.yml  release.yml
src/PyKotor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pykotor/common/: misc.py  module.py  scriptdefs.py  stream.py
src/pykotor/engine/: core.py
src/pykotor/engine/animation/: base.py
src/pykotor/engine/materials/: base.py
src/pykotor/engine/scene/: base.py
src/pykotor/extract/: capsule.py  chitin.py  installation.py  savedata.py
src/pykotor/resource/: bioware_archive.py  type.py
src/pykotor/resource/formats/bif/: io_bif.py
src/pykotor/resource/formats/bwm/: bwm_data.py  io_bwm.py
src/pykotor/resource/formats/erf/: erf_data.py
src/pykotor/resource/formats/gff/: gff_data.py
src/pykotor/resource/formats/mdl/: io_mdl.py  io_mdl_ascii.py  mdl_auto.py
src/pykotor/resource/formats/ncs/: compilers.py  decompiler.py  ncs_auto.py  ncs_data.py
src/pykotor/resource/formats/ncs/compiler/: classes.py  interpreter.py  language_server.py  lexer.py  parser.py  toolset_v3.1.1_main.py
src/pykotor/resource/formats/ncs/dencs/: actions_data.py  decoder.py  decompile_ncs.py  do_global_vars.py  do_types.py  main_pass.py
src/pykotor/resource/formats/ncs/dencs/analysis/: analysis_adapter.py  pruned_depth_first_adapter.py  pruned_reversed_depth_first_adapter.py
src/pykotor/resource/formats/ncs/dencs/node/: a_action_cmd.py  a_action_command.py  a_action_jump_cmd.py  a_add_binary_op.py  a_add_var_cmd.py  a_and_logii_op.py  a_binary_cmd.py  a_binary_command.py  a_bit_and_logii_op.py  a_bp_cmd.py  a_bp_command.py  a_command_block.py  a_comp_unary_op.py  a_cond_jump_cmd.py  a_conditional_jump_command.py  a_const_cmd.py  a_const_command.py  a_copy_down_bp_command.py  (+147 more)
src/pykotor/resource/formats/tlk/: tlk_auto.py  tlk_data.py
src/pykotor/resource/formats/tpc/: io_tga.py  io_tpc.py  tga.py  tga2tpc.py  tpc_auto.py  tpc_data.py
src/pykotor/resource/formats/twoda/: twoda_data.py
src/pykotor/resource/formats/txi/: io_txi.py  txi_data.py
src/pykotor/resource/formats/wav/: io_wav.py  io_wav_standard.py  wav_auto.py  wav_data.py  wav_obfuscation.py
src/pykotor/resource/generics/: are.py  base.py  git.py  gui.py
src/pykotor/resource/generics/dlg/: base.py  links.py
src/pykotor/tools/: __init__.py  archives.py  conversions.py  creature.py  kit.py  module.py  path.py  playpazaak.py  resources.py  scripts.py  utilities.py
src/pykotor/tslpatcher/: writer.py
src/pykotor/tslpatcher/diff/: __init__.py  application.py  objects.py  structured.py
src/pykotor/tslpatcher/diff/__pycache__/: resolution.cpython-38.pyc.2441259046192
src/pykotor/tslpatcher/mods/: ssf.py
src/utility/: error_handling.py
src/utility/common/: geometry.py  stream.py
src/utility/common/misc_string/: case_insens_str.py  mutable_str.py
src/utility/gui/qt/common/filesystem/: _older_working_fsmodel.py
src/utility/system/win32/: context_menu.py  test_better_statresult.py
src/utility/tkinter/: __init__.py  app_entry.py  base_app.py
src/utility/ui_libraries/qt/adapters/filesystem/: pyfilesystemmodel.py
src/utility/ui_libraries/qt/adapters/itemmodels/: filters.py
src/utility/ui_libraries/qt/common/: actions_dispatcher.py  expensive_functions.py
src/utility/ui_libraries/qt/common/filesystem/: address_bar.py
src/utility/ui_libraries/qt/common/tasks/: actions_executor.py
src/utility/ui_libraries/qt/filesystem/qfiledialogextended/: explorer.py  explorer_ui.py  qfiledialogextended.py  search_handler.py
src/utility/ui_libraries/qt/tools/: unifiers.py
src/utility/ui_libraries/qt/widgets/itemviews/: abstractview.py  graphicswidget.py  listwidget.py  tablewidget.py  treeview.py  treewidget.py
src/utility/ui_libraries/qt/widgets/widgets/: combobox.py  stacked_view.py
src/utility/updater/: crypto.py  downloader.py  github.py  restarter.py  update.py
(+65 files in other folders)
