[build-system]
requires = ["setuptools>=67.8.0,<70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pykotor"
version = "1.8.0"
description = "Read, modify and write files used by KotOR's game engine."
authors = [{name = "NickHugi"}]
maintainers = [{name = "th3w1zard1", email = "halomastar@gmail.com"}]
readme = {file = "../../README.md", content-type = "text/markdown"}
license = {text = "LGPL-3.0-or-later"}
keywords = [
    "kotor", "kotor1", "kotor2", "tsl",
    "star-wars", "knights-of-the-old-republic", "sith-lords",
    "modding", "game-modding", "game-files",
    "gff", "2da", "tlk", "erf", "rim", "bif", "mdl",
    "pykotor", "holocron", "bioware", "lucasarts",
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: File Formats",
    "Typing :: Typed",
]
dependencies = [
    "loggerplus>=0.1.3",
    "ply>=3.11,<4",
    "pycryptodome>=3.19.0",
]

[project.optional-dependencies]
font = [
    "pillow>=9.5; python_implementation == 'CPython'",
    "pillow>10,<11.1.0; python_implementation == 'PyPy'",
]
gl = [
    "numpy>=1.22",
    "PyOpenGL~=3.1",
    "PyGLM>=2.0,<2.8; python_implementation == 'CPython'",
]
secure_xml = ["defusedxml~=0.7"]
encodings = [
    "charset-normalizer>=2.0,<3.4; python_version<\"3.9\"",
    "charset-normalizer>=2.0; python_version>=\"3.9\"",
]
all = [
    "pillow>=9.5",
    "numpy>=1.22",
    "PyOpenGL~=3.1",
    "PyGLM>=2.0,<2.8",
    "defusedxml~=0.7",
    "charset-normalizer>=2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/th3w1zard1/PyKotor"
Documentation = "https://github.com/th3w1zard1/PyKotor/wiki"
Repository = "https://github.com/th3w1zard1/PyKotor.git"
Issues = "https://github.com/th3w1zard1/PyKotor/issues"
Changelog = "https://github.com/th3w1zard1/PyKotor/releases"

# Poetry configuration for those who prefer it
[tool.poetry]
name = "pykotor"
version = "1.8.0"
description = "Read, modify and write files used by KotOR's game engine."
authors = ["NickHugi", "Benjamin Auquite <halomastar@gmail.com>"]
maintainers = ["Benjamin Auquite <halomastar@gmail.com>"]
readme = "../../README.md"
license = "LGPL-3.0-or-later"
packages = [
    { include = "pykotor", from = "src" },
    { include = "utility", from = "src" },
]
keywords = [
    "kotor", "kotor1", "kotor2", "tsl",
    "star-wars", "knights-of-the-old-republic",
    "modding", "game-files", "pykotor",
]

[tool.poetry.dependencies]
python = "^3.8"
loggerplus = ">=0.1.3"
ply = ">=3.11,<4"
pycryptodome = ">=3.19.0"

[tool.poetry.extras]
font = ["pillow"]
gl = ["numpy", "PyOpenGL", "PyGLM"]
secure_xml = ["defusedxml"]
encodings = ["charset-normalizer"]
all = ["pillow", "numpy", "PyOpenGL", "PyGLM", "defusedxml", "charset-normalizer"]

[tool.poetry.urls]
Homepage = "https://github.com/th3w1zard1/PyKotor"
Documentation = "https://github.com/th3w1zard1/PyKotor/wiki"
Repository = "https://github.com/th3w1zard1/PyKotor.git"
Issues = "https://github.com/th3w1zard1/PyKotor/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
